# Slimnow

./: .gitmodules  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/emu/slimnow/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Executor.cpp  Executor.h  JNInterface.cpp  SlimVM.cpp  SlimVM.h  jni_interface.cpp  logger.cpp  logger.h  slim_vm.cpp  slim_vm.h
app/src/main/cpp/core/: Base.h  base.h
app/src/main/cpp/ee/: COP0.cpp  COP0Super.h  COP0_super.h  EESoc.h  MIPS_vi.cpp  MIPSvi.cpp  ee_soc.h
app/src/main/cpp/jvm/: executor.cpp  executor.h  helper.h  worker_info.h
app/src/main/cpp/tasks/: executor.cpp  executor.h  helper.h  worker_info.h
app/src/main/java/com/emu/slimnow/: InputMethodsActivity.kt  MainActivity.kt  SettingsActivity.kt  SetupActivity.kt  SlimActivity.kt
app/src/main/java/com/emu/slimnow/data/: PSXRomItem.kt
app/src/main/java/com/emu/slimnow/dialog/: RomDetailsDialog.kt
app/src/main/java/com/emu/slimnow/model/: MainActivityModel.kt  SetupModel.kt  UserPreferModel.kt
app/src/main/java/com/emu/slimnow/prefer/: GlobalFragment.kt  SettingsActivity.kt  SettingsSerializer.kt
app/src/main/java/com/emu/slimnow/ui/: GalleryFragment.kt  LogFragment.kt  RomSelectionFragment.kt  SaveManagerFragment.kt  StatisticsFragment.kt
app/src/main/proto/: UserPrefer.proto
app/src/main/res/drawable/: navi_corner.xml  navi_icon_tint.xml  navi_round_album_24.xml  navi_round_landscape_24.xml  navi_round_logo_dev_24.xml  navi_round_save_as_24.xml  navi_round_waterfall_chart_24.xml  round_storage_24.xml  selection_empty_round_disc_full_24.xml
app/src/main/res/drawable-night/: navi_corner.xml  navi_icon_tint.xml
app/src/main/res/layout/: activity_inputmethods.xml  activity_main.xml  activity_settings.xml  activity_setup.xml  activity_slim.xml  fragment_gallery.xml  fragment_log.xml  fragment_romselection.xml  fragment_savemanager.xml  fragment_statistics.xml
app/src/main/res/menu/: navi_items.xml  top_items.xml
app/src/main/res/values/: colors.xml  splash.xml  strings.xml  themes.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/main/res/xml/: prefer_app.xml
app/src/test/java/com/emu/slimnow/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
